--- a/cover letter/resubmission.tex
+++ b/cover letter/resubmission.tex
@@ -73,7 +73,8 @@ Compared to the submission to AAMAS 2021, and thanks to the reviews, we have bro
 	\item We integrated the Related Works section into the Introduction to save space, but kept all the references we added following the earlier criticisms (in the IJCAI submission) about the missing references to the literature.
 	\item We went beyond impartial culture by testing our heuristics on real data. The results show that the number of questions to be asked is much smaller with real data than with impartial culture, as expected.
 	\item We changed the phrasing of some of our conclusions that were too general.
-	\item \commentBN{"Shouldn't we add that we removed proofs and tables?"}
+	\item We better stated the take away messages of the paper to underline our contributions.
+	\item The figures are now vector images, improving the readability of the experimental results.
 \end{itemize}
 
 \section{Submission to IJCAI 2020} 
